@@ -1,6 +1,7 @@
 Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.10.2 (unreleased)
+  - User can now search branches by name. !5144
   - Don't show comment button in gutter of diffs on MR discussion tab
 
 v 8.10.1
